--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
     head
         title KnowlegeBase
         link(rel='stylesheet' href="/bower_components/bootstrap/dist/css/bootstrap.css")
+        link(rel='stylesheet' href="/css/style.css")
     body
     nav.navbar.navbar-expand-md.navbar-dark.bg-dark
         a.navbar-brand(href='/') KnolegeBase
@@ -10,9 +11,24 @@ html
             span.navbar-toggler-icon
         #navbarsExampleDefault.collapse.navbar-collapse
             ul.navbar-nav.mr-auto
-                li.nav-item
-                    a.nav-link(href='/articles/add') Add Article                        
+                if user
+                    li.nav-item
+                        a.nav-link(href='/articles/add') Add Article   
+            ul.navbar-nav.navbar-right
+                if user
+                    li.nav-item
+                        a.nav-link(href='/users/logout') Logout
+                else    
+                    li.nav-item
+                        a.nav-link(href='/users/register') Register
+                    li.nav-item
+                        a.nav-link(href='/users/login') Login
+                                     
     .container
+        != messages('message', locals)
+        if errors
+            each error, i in errors 
+                div(class="alert alert-danger") #{error.msg}
         block content
         br
         hr
@@ -20,3 +36,4 @@ html
             p Jhod@vzu
     script(src="/bower_components/jquery/dist/jquery.js")
     script(src="/bower_components/bootstrap/dist/js/bootstrap.js")
+    script(src="/js/main.js")
